--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-locomotive-scroll": "^0.2.2",
     "react-router-dom": "^6.26.1",
     "react-social-icons": "^6.18.0",
-    "react-typical": "^0.1.3"
+    "react-typical": "^0.1.3",
+    "swiper": "^11.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
